--- a/DapperStore.Domain/DapperStore.Domain.csproj
+++ b/DapperStore.Domain/DapperStore.Domain.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="FluentValidator" Version="2.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DapperStore.Shared\DapperStore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
